# fastapi_rest_template

./: README.md  pyproject.toml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
mdpService/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  logging.py  settings.py
mdpService/db/: base.py  utils.py
mdpService/db/dao/: dummy_dao.py
mdpService/db/models/: __init__.py  dummy_model.py
mdpService/services/: __init__.py
mdpService/services/redis/: dependency.py  lifetime.py
mdpService/tests/: __init__.py  test_dummy.py
mdpService/web/: __init__.py  application.py  lifetime.py
mdpService/web/api/: __init__.py  router.py
mdpService/web/api/airflow_generator/: __init__.py  schema.py  views.py
mdpService/web/api/docs/: __init__.py
mdpService/web/api/dummy/: __init__.py  views.py
mdpService/web/api/echo/: __init__.py  views.py
mdpService/web/api/monitoring/: __init__.py
mdpService/web/api/redis/: __init__.py  views.py
